discussion/kv_engine/170345/170345_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Move JSON validation to FrontEndThread member

Previously we had the JSON validator as a member in the
FrontEndThread struct, and everyone who wanted to use
it could use it the way they wanted.

This patch refactor this to a member function:

    bool isValidJson(Cookie& cookie, std::string_view view);

The member function adds a trace span and updates the bucket
histogram for the validation time.

Call the same method from subdoc validation instead of
creating a new validator every time we need one.

Change-Id: I7e29ceecb6eee3abf2a1d6ee2c339f1c0b0d2206

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-09 12:32:10.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-09 12:45:07.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43706/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43706/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5141/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5141/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5083/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5083/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5083/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16250/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16250/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18210/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17471/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17471/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25569/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25569/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15433/ : FAILURE

clang-tidy found the following problems:

<pre>
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/tuple:69:28: error: implicit instantiation of undefined template "MicrosecondStopwatch<Hdr1sfMicroSecHistogram>" [clang-diagnostic-error]
    = typename conditional<__is_final(_Tp), false_type,
                           ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/tuple:73:12: note: in instantiation of template type alias "__empty_not_final" requested here
           bool = __empty_not_final<_Head>::value>
                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/tuple:193:15: note: in instantiation of default argument for "_Head_base<0, MicrosecondStopwatch<Hdr1sfMicroSecHistogram> >" required here
      private _Head_base<_Idx, _Head>
              ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/tuple:887:36: note: in instantiation of template class "std::_Tuple_impl<0, MicrosecondStopwatch<Hdr1sfMicroSecHistogram>, cb::tracing::SpanStopwatch>" requested here
    class tuple<_T1, _T2> : public _Tuple_impl<0, _T1, _T2>
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/scope_timer.h:118:30: note: in instantiation of template class "std::tuple<MicrosecondStopwatch<Hdr1sfMicroSecHistogram>, cb::tracing::SpanStopwatch>" requested here
    std::tuple<Listeners...> listeners;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:215:53: note: in instantiation of template class "ScopeTimer<MicrosecondStopwatch<Hdr1sfMicroSecHistogram>, cb::tracing::SpanStopwatch>" requested here
    ScopeTimer<HdrMicroSecStopwatch, SpanStopwatch> timer(
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:38:7: note: template is declared here
class MicrosecondStopwatch;
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/type_traits:1070:54: error: implicit instantiation of undefined template "MicrosecondStopwatch<Hdr1sfMicroSecHistogram>" [clang-diagnostic-error]
    : public __bool_constant<__is_assignable(_Tp, _Up)>
                                                     ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/type_traits:139:26: note: in instantiation of template class "std::is_assignable<MicrosecondStopwatch<Hdr1sfMicroSecHistogram> &, MicrosecondStopwatch<Hdr1sfMicroSecHistogram> >" requested here
    : public conditional<_B1::value, _B2, _B1>::type
                         ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/tuple:923:11: note: in instantiation of template class "std::__and_<std::is_assignable<MicrosecondStopwatch<Hdr1sfMicroSecHistogram> &, MicrosecondStopwatch<Hdr1sfMicroSecHistogram> >, std::is_assignable<cb::tracing::SpanStopwatch &, cb::tracing::SpanStopwatch> >" requested here
          return __and_<is_assignable<_T1&, _U1>,
                 ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/tuple:1184:38: note: in instantiation of function template specialization "std::tuple<MicrosecondStopwatch<Hdr1sfMicroSecHistogram>, cb::tracing::SpanStopwatch>::__assignable<MicrosecondStopwatch<Hdr1sfMicroSecHistogram>, cb::tracing::SpanStopwatch>" requested here
      operator=(typename conditional<__assignable<_T1, _T2>(),
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/scope_timer.h:118:30: note: in instantiation of template class "std::tuple<MicrosecondStopwatch<Hdr1sfMicroSecHistogram>, cb::tracing::SpanStopwatch>" requested here
    std::tuple<Listeners...> listeners;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:215:53: note: in instantiation of template class "ScopeTimer<MicrosecondStopwatch<Hdr1sfMicroSecHistogram>, cb::tracing::SpanStopwatch>" requested here
    ScopeTimer<HdrMicroSecStopwatch, SpanStopwatch> timer(
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:38:7: note: template is declared here
class MicrosecondStopwatch;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15433/ )

Compile error at /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/tuple:69:28:
error: implicit instantiation of undefined template "MicrosecondStopwatch<Hdr1sfMicroSecHistogram>" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15433/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36875/ : FAILURE

Compile error at /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/tuple:69:28:
error: implicit instantiation of undefined template "MicrosecondStopwatch<Hdr1sfMicroSecHistogram>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36875/ )

CMake error: CMakeLists.txt:134 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36875/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14276/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17162/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
